# krypto-explorer

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTORS.md  DOTenv  Dockerfile  LICENSE  README.md  docker-compose.yml  env.example  pyproject.toml  pytest.ini  qrypt.db  requirements.txt  start.sh
.github/workflows/: ci_cd.yml
localcache/: service_coingecko.json
src/app/: main.py
src/app/tokens/: api.py  crud.py  model.py  schema.py  service.py
src/app/tokens/tests/: test_api.py  test_crud.py  test_model.py  test_schema.py  test_service.py
src/qrypt/: main.py
src/qrypt/core/: config.py  db.py  log.py
src/qrypt/core/ops/: db.py
src/qrypt/tokens/: api.py  crud.py  model.py  models.py  schema.py
src/qrypt/tokens/services/coingecko/: adapter.py  config.py  constants.py  endpoints.py  schema.py  strategies.py
src/qrypt/tokens/services/coingecko/ops/: admin.py
src/qrypt/tokens/services/coingecko/tests/: test_adapter.py
src/qrypt/tokens/tests/: test_api.py  test_crud.py  test_model.py  test_schema.py  test_service.py
src/qrypt/ui/: app.py
src/qrypt/users/: models.py
